--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://github.com/pierreyvesdonze/portfolio",
+  "homepage": "https://pierreyvesdonze.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build -r https://github.com/pierreyvesdonze/portfolio.git"
   },
   "eslintConfig": {
     "extends": [
