add another project

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r https://github.com/pierreyvesdonze/portfolio.git"
+    "deploy": "gh-pages -d build -r git@github.com:pierreyvesdonze/portfolio.git"
   },
   "eslintConfig": {
     "extends": [
